sql/test/error/error11.exp


select * from t1 order by 9.0;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
invalid ORDER BY
